fixed direct filter in association endpoint, removed in evidence endpoint
